1998-12-10  John R. Jackson  <jrj@purdue.edu>

	* common-src/amflock.c (main): call set_pname() for CONFIGURE_TEST.
	* configure.in: do not set up pname global for lnlock CONFIGURE_TEST.

1998-12-09  Henning P. Schmiedehausen  <henning@tanstaafl.de>

	* client-src/sendbackup.c (parse_options): Added check whether the
	pathname of the exclude file is relative and if yes, use the
	mountpoint of the filesystem as anchor.  So you can put your exclude
	file in the root of the filesystem to backup.
	* client-src/sendsize.c (getsize_gnutar): added the same check as
	above so sendsize uses the same exclude file.

1998-12-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/holding.c (size_holding_files): return size in KB.
	* server-src/driver.c (adjust_diskspace): use KB returned by
	size_holding_files.
	* server-src/driver.c: rename .tmp file
	* server-src/dumper.c: do not rename .tmp file. let the driver do it.

1998-12-09  John R. Jackson  <jrj@purdue.edu>

	* common-src/stream.c (stream_server): do not request a reserved port
	if we are root but PORTRANGE is defined.  Also, clean up the code
	and make sure *portp is -1 on all error returns.

1998-12-08  John R. Jackson  <jrj@purdue.edu>

	* Makefile.am: add the user-contributed area.
	* contrib/README: describe the user-contributed area.
	* contrib/dbbackup.README: README for Oracle database backup system.
	* contrib/dbbackup.ksh: Oracle database backup system wrapper.
	* contrib/dbbackup.sql: Oracle database backup system setup commands.
	* contrib/dbbackup.tcl: Oracle database backup system main body.

1998-12-08  John R. Jackson  <jrj@purdue.edu>

	* amplot/Makefile.am: fix install rule when DESTDIR is non-null,
	compliments of Henning P. Schmiedehausen <hps@tanstaafl.de>.

1998-12-08  John R. Jackson  <jrj@purdue.edu>

	* configure.in: fix reversed code for --with-amrecover, compliments
	of Yar Tikhiy <yar@radio-msu.net>.

1998-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
